[package]
name = "food_social_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.4.1"
env_logger = "0.11.1"
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
